--- a/.config
+++ b/.config
@@ -6534,7 +6534,7 @@ CONFIG_PACKAGE_vlmcsd=y
 CONFIG_PACKAGE_wol=y
 # CONFIG_PACKAGE_wpan-tools is not set
 # CONFIG_PACKAGE_wwan is not set
-# CONFIG_PACKAGE_xfrm is not set
+CONFIG_PACKAGE_xfrm=y
 # CONFIG_PACKAGE_xinetd is not set
 # end of Network
 
